--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
 .search-bar{
   margin: 50px 400px ;
 }
-.results{
-  padding:20px;
-  text-align: left;
-  max-width: 1200px;
-}
 
 .container {
   display: flex;
@@ -18,3 +13,83 @@
   padding:20px;
 }
 
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  max-width: 250px;
+  border-radius: 5px;
+  margin: 1em;
+  width: 250px;
+  position: relative;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.buy-button{
+  display: none;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  bottom: 15px;
+}
+
+
+.card:hover .buy-button {
+  display: block;
+}
+
+.results{
+  padding:20px;
+  text-align: left;
+  max-width: 1600px;
+  display: flex;
+  flex-flow: wrap;
+}
+
+.result-description h3{
+  margin-top:0;
+  font-size: 1em;
+  text-align: center;
+  text-overflow: ellipsis;
+  font-weight: normal;
+}
+
+.result-name{
+  height:55px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 1em;
+}
+
+.result-image{
+  margin: 1em;
+  height: 150px;
+  overflow: hidden;
+}
+
+.result-image img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
+.result-description{
+  display: grid;
+  margin:2em 1em 1em 1em;
+  text-align: center;
+}
+
+.result-brand{
+  font-size: 0.875em;
+  color:#999;
+}
+.result-price{
+  font-weight: bold;
+}
